# SpellChecker

./: .gitignore  AUTHORS  CMakeLists.txt  README  TextMiningApp  TextMiningCompiler  check.py  compile.sh  compile_test.sh  configure  memory.sh  word_min.txt
src/: bloom.cc  bloom.hh  main.cc  ptrie.cc  ptrie.hh  text-mining-app.cc  text-mining-compiler.cc
tests/: main.cc  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc
